--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bevy = "0.14.1"
+bevy = { version = "0.14.1" }
 bevy_panorbit_camera = "0.19.2"
+
+[features]
+default = ["webgpu"]
+webgl2 = ["bevy/webgl2"]
+webgpu = ["bevy/webgpu"]
 
 # Idiomatic Bevy code often triggers these lints, and the CI workflow treats them as errors.
 # In some cases they may still signal poor code quality however, so consider commenting out these lines.
@@ -16,10 +21,8 @@ too_many_arguments = "allow"
 # Queries that access many components may trigger this lint.
 type_complexity = "allow"
 
-
 # Compile with Performance Optimizations:
 # https://bevyengine.org/learn/quick-start/getting-started/setup/#compile-with-performance-optimizations
-
 # Enable a small amount of optimization in the dev profile.
 [profile.dev]
 opt-level = 1
